# KaoYanAssistant

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  test].jks
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/kaoyanassistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  qwen3_embedding_jni.cpp
app/src/main/java/com/example/kaoyanassistant/: KaoyanApplication.kt  MainActivity.kt
app/src/main/java/com/example/kaoyanassistant/core/: ConfigManager.kt  ContextManager.kt  StudyPlanManager.kt  UserManager.kt
app/src/main/java/com/example/kaoyanassistant/services/: AIService.kt  DocumentManager.kt  EmbeddingService.kt  IndexDocumentWorker.kt  LocalEmbeddingEngine.kt  LocalEmbeddingService.kt  RagIndexManager.kt  SchoolService.kt
app/src/main/java/com/example/kaoyanassistant/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/example/kaoyanassistant/ui/components/: MarkdownMathView.kt
app/src/main/java/com/example/kaoyanassistant/ui/document/: DocumentScreen.kt  DocumentViewModel.kt
app/src/main/java/com/example/kaoyanassistant/utils/: DeviceUtils.kt  ImageUtils.kt  Logger.kt  MarkdownRenderer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/kaoyanassistant/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
qwen3_embedding_pack/: build.gradle.kts
qwen3_embedding_pack/src/main/: AndroidManifest.xml
(+14 files in other folders)
